[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "almaty-traffic"
version = "0.1.0"
description = "CLI-сервис сбора и текстового описания пробок Алматы через Yandex Distance Matrix API"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
almaty-traffic = "almaty_traffic.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/almaty_traffic"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
